--- a/index.html
+++ b/index.html
@@ -19,25 +19,21 @@
 <body>
   <div class="container">
     <div class="rating-container">
-      <div class="start-icon">
-        <img src="./images/icon-star.svg">
-      </div>
       <div id="title-container">
+        <img src="./images/icon-star.svg" alt="star icon">
         <h1>How did we do?</h1>
-      </div>
-      <!-- Rating state start -->
-      <div id="rating-text">
         <p>
           Please let us know how we did with your support request. All feedback is appreciated 
           to help us improve our offering!
           </p>
       </div>
+      <!-- Rating state start -->
       <div id="rating">
-          <input type="button" href="#" value="1" id="one"> 
-          <input type="button" href="#" value="2" id="two"> 
-          <input type="button" href="#" value="3" id="three"> 
-          <input type="button" href="#" value="4" id="four"> 
-          <input type="button" href="#" value="5" id="five"> 
+          <input type="button" value="1" id="one"> 
+          <input type="button" value="2" id="two"> 
+          <input type="button" value="3" id="three"> 
+          <input type="button" value="4" id="four"> 
+          <input type="button" value="5" id="five"> 
         </div>
   
       <button id="btn-submit"> SUBMIT </button>
